[package]
name = "tracing-glog"
version = "0.2.1"
edition = "2021"
description = "a glog-inspired formatter for tracing-subscriber"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/davidbarsky/tracing-glog"
repository = "https://github.com/davidbarsky/tracing-glog"
documentation = "https://docs.rs/tracing-glog"

[dependencies]
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.3", features = ["std", "fmt", "registry", "time", "local-time"], default-features = false }
time = { version = "0.3.9", features = ["formatting"] }
nu-ansi-term = { version = "0.46", optional = true }
tracing-log = { version = "0.1", optional = true }

[dev-dependencies]
thiserror = "1"
anyhow = "1"
structopt = "0.3"
tracing = { version = "0.1" }
tokio = { version = "1.21", features = ["full"] }

[features]
default = ["ansi"]
ansi = ["nu-ansi-term", "tracing-subscriber/ansi"]
tracing-log = ["dep:tracing-log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
