[package]
name = "tracing-glog"
version = "0.3.0"
edition = "2021"
description = "a glog-inspired formatter for tracing-subscriber"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/davidbarsky/tracing-glog"
repository = "https://github.com/davidbarsky/tracing-glog"
documentation = "https://docs.rs/tracing-glog"

[dependencies]
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.3", features = ["std", "fmt", "registry", "time", "local-time", "chrono"], default-features = false }
time = { version = "0.3.9", features = ["formatting"] }
chrono = { version = "0.4.20", optional = true }
nu-ansi-term = { version = "0.46", optional = true }
tracing-log = { version = "0.1", optional = true }

[dev-dependencies]
thiserror = "1"
anyhow = "1"
structopt = "0.3"
tracing = { version = "0.1" }
tokio = { version = "1.21", features = ["full"] }

[features]
default = ["ansi"]
ansi = ["nu-ansi-term", "tracing-subscriber/ansi"]
tracing-log = ["dep:tracing-log"]
chrono = ["dep:chrono", "tracing-subscriber/chrono"]

[[example]]
name = "tokio"
required-features = ["chrono", "ansi"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
tracing = { git = 'https://github.com/tokio-rs/tracing.git', branch = "v0.1.x" }
tracing-subscriber = { git = 'https://github.com/tokio-rs/tracing.git', branch = "v0.1.x" }
tracing-log = { git = 'https://github.com/tokio-rs/tracing.git', branch = "v0.1.x" }
