[package]
name = "tracing-glog"
version = "0.4.1"
edition = "2021"
rust-version = "1.58"
description = "a glog-inspired formatter for tracing-subscriber"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/davidbarsky/tracing-glog"
repository = "https://github.com/davidbarsky/tracing-glog"
documentation = "https://docs.rs/tracing-glog"

[dependencies]
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "registry", "chrono"], default-features = false }
chrono = { version = "0.4.20" }
time = { version = "0.3.9", features = ["formatting"], default-features = false, optional = true }
nu-ansi-term = { version = "0.46", optional = true }
tracing-log = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1" }
tokio = { version = "1.21", features = ["full"] }

[features]
default = ["ansi"]
ansi = ["nu-ansi-term", "tracing-subscriber/ansi"]
tracing-log = ["dep:tracing-log"]
time = ["dep:time", "tracing-subscriber/time"]
local-time = ["dep:time", "tracing-subscriber/local-time"]

[[example]]
name = "tokio"
required-features = ["ansi"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
